prevent double tap from zooming on iOS device

--- a/css/index.css
+++ b/css/index.css
@@ -337,7 +337,7 @@ body {
   border: none;
   z-index: 10;
   transition: opacity 0.3s;
-  background-size: 26px 26px; 
+  background-size: 20px 20px; 
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -380,6 +380,7 @@ body {
   transition: opacity 0.3s;
   background-size: 20px 20px; 
   background-repeat: no-repeat;
+  touch-action: manipulation;
 }
 
 .up-arrow-btn {
